--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -672,3 +672,13 @@
     Pages   = {85--106},
     DOI     = {10.2307/1885568}
 }
+
+@Article{abadmagn:2002,
+    Author  = {Karim M.~Abadir and Jan R.~Magnus},
+    Title   = {Notation in Econometrics: A Proposal for a Standard},
+    Year    = {2002},
+    Journal = {Econometrics Journal},
+    Volume  = {5},
+    Pages   = {76--90},
+    DOI     = {10.1111/1368-423X.t01-1-00074}
+}
