--- a/index/04-Results.Rmd
+++ b/index/04-Results.Rmd
@@ -93,9 +93,9 @@ write_csv(
 )
 ```
 
-I estimate the non-asset-market uncertainty index following the quasi-maximum likelihood estimator of @dozetal:2012 as described in [Dynamic factor model], although alternative estimators are tested in [Robustness]. Moreover, I use one dynamic factor, one static factor and one lag in the specification of the model because I am looking for one single summary index that captures the common comovements of uncertainty, hence, one dynamic and static factor seems appropriate. This binds the lag order to one as the lag order can not be greater that the ratio between the number of static factors and the number of dynamic factors---$p \le \frac{r}{q}$ [@kililutk:2017].
+I estimate the non-asset-market uncertainty index following the quasi-maximum likelihood estimator of @dozetal:2012 as described in [Dynamic factor model], although alternative estimators are tested in [Robustness]. Moreover, I use one dynamic factor, one static factor and one lag in the specification of the model because I am looking for one single summary index that captures the common comovements of uncertainty, hence, one dynamic and static factor seems appropriate. This binds the lag order to one as the lag order can not be greater that the ratio between the number of static factors and the number of dynamic factors [@kililutk:2017].
 
-Although the goal is construct one economic index from the underlying series, it is worthy show all factors and its behavior. Each factor is associated with an eigenvalue of the correlation matrix of the the raw data. The first factor is associated with the largest eigenvalue, the second factor with the second-largest eigenvalue, and so on. A *scree plot* displays the marginal contribution---the average additional explanatory value of the kth factor---of the kth principal component to the average $R^{2}$ of the $N$ regressions of $X_{t}$ against the first k principal components. Essentially, the scree plot shows the ordered eigenvalues of $\hat{\sum}_{X}$ normalized by the sum of eigenvalues. The figure \@ref(fig:scree-plot) displays the scree plot where only the first factor is significant. Likewise, the plot shows a bend and only the first factor is above this sharp break (which suggest one factor following the scree test of @cattel:1966). In summary, a single component is appropriate for summarizing this dataset.
+Although the goal is construct one economic index from the underlying series, it is worthy show all factors and its behavior. Each factor is associated with an eigenvalue of the correlation matrix of the the raw data. The first factor is associated with the largest eigenvalue, the second factor with the second-largest eigenvalue, and so on. A *scree plot* displays the marginal contribution---the average additional explanatory value of the $k$th factor---of the $k$th principal component to the average $R^{2}$ of the $n$ regressions of $\mX$ against the first $k$ principal components. Essentially, the scree plot shows the ordered eigenvalues of $\hat{\sum}_{\mX}$ normalized by the sum of eigenvalues. The Figure \@ref(fig:scree-plot) displays the scree plot where only the first factor is significant. Likewise, the plot shows a bend and only the first factor is above this sharp break---which suggest one factor following the scree test of @cattel:1966. In summary, a single component is appropriate for summarizing this dataset.
 
 ```{r scree_plot_values, include = FALSE}
 scree_plot <- fa.parallel(
@@ -167,9 +167,9 @@ In the Figure \@ref(fig:non-asset-market-uncertainty-index) is presented the non
 
 The index is clearly countercyclical, the cross-correlation with industrial production growth^[The industrial production growth is calculated as the 12-month moving average of monthly growth rates (in annualized percentage).] is $-0.69$. In the same period, the cross-correlation for the macroeconomic uncertainty index from @juraetal:2015 is `r comma(cor(VAR_data[["moving_growth_production_all"]], VAR_data[["MU_JLN_h1"]]))`. The latter shows that the new index has less pronounced peaks around the recession dates of the economy, which is more appealing to a continually level of uncertainty in the economy.
 
-In Table \@ref(tab:summary-table) I report descriptive statistics for the non-asset-market uncertainty index. The skewness, kurtosis, persistence and half-life for the full sample and for two sub-samples are presented (January 1985 to July 2007 and August 2007 to August 2017). This break date was chosen after testing for a break at an unknown date in the autoregressive model of the shocks persistence---AR(1) with drift. The basic idea is to calculate an $F$ statistic---often called Chow statistic, named for its inventor, Gregory Chow [-@chow:1960]---for each conceivable breakpoint in the interval $\tau_{0} = 0.15T$ and $\tau_{1} = 0.85T$, where $T$ is the total number of observations, and reject the null hypothesis of structural stability if the largest of the resulting $F$ statistics exceeds a certain critical value^[That is to say, an $F$ statistic is computed for each potential breakpoint between 1989:M11 and 2012:M9 testing the hypothesis that the coefficients are constant against the alternative that they have different values before and after the breakpoint, omitting the leading and trailing 15 \% of observations.] [@andrews:2003]. This modified Chow test is variously called the Quand Likelihood Ratio (QLR) statistic [@quandt:1960]^[See @hansen:2001 for additional discussion of estimation and testing in the presence of discrete breaks. Also, see @perron:2006 for a general survey.]. Given that there is evidence of one structural change in the model is necessary dating that structural change. Bai and Perron [-@baiperr:1998;-@baiperr:2003]  established a general methodology for estimating breakpoints and their associated confidence intervals in OLS regression. Henceforth, the two periods are choose following this methodology.
+I report in Table \@ref(tab:summary-table) descriptive statistics for the non-asset-market uncertainty index. The skewness, kurtosis, persistence and half-life for the full sample and for two sub-samples are presented (January 1985 to July 2007 and August 2007 to August 2017). This break date was chosen after testing for a break at an unknown date in the autoregressive model of the shocks persistence: AR($1$) with drift. The basic idea is to calculate an $\rF$ statistic---often called Chow statistic, named for its inventor, Gregory Chow [-@chow:1960]---for each conceivable breakpoint in the interval $\tau_{0} = 0.15T$ and $\tau_{1} = 0.85T$, where $T$ is the total number of observations, and reject the null hypothesis of structural stability if the largest of the resulting $\rF$ statistics exceeds a certain critical value^[That is to say, an $\rF$ statistic is computed for each potential breakpoint between 1989:M11 and 2012:M9 testing the hypothesis that the coefficients are constant against the alternative that they have different values before and after the breakpoint, omitting the leading and trailing 15 \% of observations.] [@andrews:2003]. This modified Chow test is variously called the Quand Likelihood Ratio ($\rQLR$) statistic [@quandt:1960]^[See @hansen:2001 for additional discussion of estimation and testing in the presence of discrete breaks. Also, see @perron:2006 for a general survey.]. Given that there is evidence of one structural change in the model is necessary dating that structural change. Bai and Perron [-@baiperr:1998;-@baiperr:2003]  established a general methodology for estimating breakpoints and their associated confidence intervals in OLS regression. Henceforth, the two periods are choose following this methodology.
 
-The summary statistics in Table  \@ref(tab:summary-table) for the full period are misleading. For the first period of the sample the persistence is less that for the second period, so the time before a shock halve the distance to the stationary mean is smaller. Moreover, the distribution of the uncertainty index is different in location and shape for each period: the first part is slightly asymmetric and it has fewer outliers while the second part has more values above that below the mean and it has several values far from the mean. Nevertheless, the similarity between both periods is substantial but the shock for the Great Recession in 2007--2009. The last result can be though as evidence in line with a level of uncertainty less volatile and extreme across the economy, which is in concordance with the lower correlation founded in the last paragraph with a proxy for business cycle---industrial production.
+The summary statistics in Table  \@ref(tab:summary-table) for the full period are misleading. For the first period of the sample the persistence is less that for the second period, so the time before a shock halve the distance to the stationary mean is smaller. Moreover, the distribution of the uncertainty index is different in location and shape for each period: the first part is slightly asymmetric and it has fewer outliers while the second part has more values above that below the mean and it has several values far from the mean. Nevertheless, the similarity between both periods is substantial but the shock for the Great Recession in 2007--2009. The last result can be though as evidence in line with a level of uncertainty less volatile and extreme across the economy, which is in concordance with the lower correlation founded in the last paragraph with a proxy for business cycle: industrial production.
 
 The persistence of the non-asset-market uncertainty index in the second sample is greater, for example, than that of the macroeconomic uncertainty from @juraetal:2015: `r comma(DescribeIndex(DFM_base[DFM_base[["Date"]] >= "2007-08-31", ][["NAM"]])[4])` months versus `r comma(DescribeIndex(uncertainty_indices[["MU_JLN_h1"]])[4])` months. This shows that the level of uncertainty is continual in the sample.
 
@@ -256,36 +256,36 @@ corrplot(
 )
 ```
 
-To interpret the Figure \@ref(fig:corr-plot), the color in each cell represents a correlation between the two variables that meet at each cell. The magnitude and direction of the correlation is defined by the color spectrum in the legend of the plot. In general, the light color represents a positive correlation and the dark color represents a low or even negative correlation. Also, the rows and columns have been reordered (using principal components analysis, as explained in @friendly:2002 for correlograms) to cluster variables together that have similar correlation patterns. It is shown from the shaded cells that the non-asset-market uncertainty index is much more correlated with the econometrics measures of uncertainty and less with the newspaper-based measures of uncertainty.
+To interpret the Figure \@ref(fig:corr-plot), the color in each cell represents a correlation between the two variables that meet at each cell. The magnitude and direction of the correlation is defined by the color spectrum in the legend of the plot. In general, the light color represents a positive correlation and the dark color represents a low or even negative correlation. Also, the rows and columns have been reordered---using principal components analysis, as explained in @friendly:2002 for correlograms---to cluster variables together that have similar correlation patterns. It is shown from the shaded cells that the non-asset-market uncertainty index is much more correlated with the econometrics measures of uncertainty and less with the newspaper-based measures of uncertainty.
 
 ## Estimates on the Impact of Non-Asset-Market Uncertainty Shocks {#estimates-on-the-impact-of-non-asset-market-uncertainty-shocks}
 
 I explore the dynamic relationship between my uncertainty index and some variables from the United States' economy. For that purpose, I use a benchmark model well documented: the model proposed by @chrietal:2005---and used as a base in @chuletal:2017. First, the characterization of monetary policy is defined by:
 
 \begin{equation}
-    R_{t} = f(\Omega_{t}) + \epsilon_{t} (\#eq:R)
+    r_{t} = f(\Omega_{t}) + \epsi_{t} \quad (t = 1, 2, \dots, T) (\#eq:R)
 \end{equation}
 
-Where, $R_ {t}$ is the effective federal funds rate---understood as the monetary policy instrument---, $f$ is a linear function, $\Omega_{t}$ is an information set and $\epsilon_{t}$ is the monetary policy shock, where it is assumed that $\epsilon_{t}$ is orthogonal to $\Omega_{t}$.
+Where, $r_{t}$ is the effective federal funds rate (understood as the monetary policy instrument), $f$ is a linear function, $\Omega_{t}$ is an information set and $\epsi_{t}$ is the monetary policy shock, where it is assumed that $\epsi_{t}$ is orthogonal to $\Omega_{t}$.
 
-Considering $Y_{t}$ as the set of variables to which the dynamic effect of an uncertainty shock will be analyzed, there is:
+Considering the $n$-dimensional vector $\vy_{t}$ as the set of variables to which the dynamic effect of an uncertainty shock will be analyzed, there is:
 
 \begin{equation}
-    Y_{t} = 
-    \begin{bmatrix}
-      Y_{1t} & R_{t} & Y_{2t} & U_{t} (\#eq:variables)
-    \end{bmatrix}_{T \times N}'
+    \vy_{t} = 
+    \begin{pmatrix}
+      \va_{t} & r_{t} & \vb_{t} & \upsilon_{t} (\#eq:variables)
+    \end{pmatrix}'
 \end{equation}
 
-The vector $Y_{1t}$ is composed of the variables whose values at the moment $t$ are contained in $\Omega_{t}$ and it is assumed that they do not respond simultaneously to a monetary policy shock: production, employment, consumption, inflation, new orders, wages and labor. The vector $Y_{2t}$ consists of the values at the moment $t$ of all the other variables in $\Omega_{t}$, which simultaneously respond to a monetary policy shock: stock market index and M2. In the last position, I place my uncertainty index $U_{t}$---as do @juraetal:2015, @bloom:2009, and @chuletal:2017^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. I estimate a VAR model with 12 fixed lags, as opposed to the four quarters used in @chrietal:2005 following the caveats of Leeb \& Pötscher [-@leebpots:2005;-@leebpots:2006], as discussed in [Lag order]. I recover the structural innovations by means of a Cholesky factorization of the variance-covariance matrix. Since depending on whether the variables react or not to other variables contemporaneously, the Cholesky decomposition implies a certain ordering, the estimation order from more exogenous to more endogenous is the same as of the Equation \@ref(eq:variables).
+The vector $\va_{t}$ is composed of the variables whose values at the moment $t$ are contained in $\Omega_{t}$ and it is assumed that they do not respond simultaneously to a monetary policy shock: production, employment, consumption, inflation, new orders, wages and labor. The vector $\vb_{t}$ consists of the values at the moment $t$ of all the other variables in $\Omega_{t}$, which simultaneously respond to a monetary policy shock: stock market index and M2. In the last position, I place my uncertainty index $\upsilon_{t}$---as do @juraetal:2015, @bloom:2009, and @chuletal:2017^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. I estimate a VAR model with 12 fixed lags, as opposed to the four quarters used in @chrietal:2005 following the caveats of Leeb \& Pötscher [-@leebpots:2005;-@leebpots:2006], as discussed in [Lag Order]. I recover the structural innovations by means of a Cholesky factorization of the variance-covariance matrix. Since depending on whether the variables react or not to other variables contemporaneously, the Cholesky decomposition implies a certain ordering, the estimation order from more exogenous to more endogenous is the same as of the Equation \@ref(eq:variables).
 
 The VAR model with constant term ignored can be written as follows:
 
 \begin{equation}
-  Y_{t} = A_{1}Y_{t - 1} + \cdots + A_{12}Y_{t - 12} + C \eta_{t}
+  \vy_{t} = \mA_{1} \vy_{t - 1} + \cdots + \mA_{12} \vy_{t - 12} + \mC \veta_{t}
 \end{equation}
 
-where $C$ is a $11 \times 11$ lower triangular matrix with diagonal terms equal to unity, and $\eta_{t}$ is a eleven-dimensional vector of zero-mean, serially uncorrelated shocks with a diagonal variance-covariance matrix. I estimate the parameters $A_{i} ~ \text{with} ~ i=1, \ldots, ~ 12$, $C$, and the variances of the elements of $\eta_{t}$ using standard least-squares methods. Using these estimates, I compute the dynamic path of the variables following a one shock in $U_{t}$ with initial conditions set to zero. This paths corresponds to the coefficients in the impulse response functions, which are displayed in Figure \@ref(fig:irf-baseline-plot).
+where $\mC$ is a $11 \times 11$ lower triangular matrix with diagonal terms equal to unity, and $\veta_{t}$ is a 11-dimensional vector of zero-mean, serially uncorrelated shocks with a diagonal variance-covariance matrix. I estimate the parameters $\mA_{i} ~ \text{with} ~ i=1, \ldots, ~ 12$, $\mC$, and the variances of the elements of $\veta_{t}$ using standard least-squares methods. Using these estimates, I compute the dynamic path of the variables following a one shock in $\upsilon_{t}$ with initial conditions set to zero. This paths corresponds to the coefficients in the impulse response functions, which are displayed in Figure \@ref(fig:irf-baseline-plot).
 
 ```{r chosen_variables}
 chosen_variables <- c(
@@ -392,9 +392,9 @@ matrix_irf %>%
     theme(strip.text = element_text(size = rel(1.25)))
 ```
 
-Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series does not stabilize at a lower level as reported in @chuletal:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect proposed in @chuletal:2017 for New Orders.
+Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series does not stabilize at a lower level as reported in @chuletal:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal Reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect evidenced in @chuletal:2017 for New Orders.
 
-The Figure \@ref(fig:fevd-plot) shows the forecast error variance decomposition (FEVD) which allows to analyze the contribution of each variable to the $h$-step forecast error variance of all other variables. Accordingly, the forecast error of the production series is explained by uncertainty six months after the innovation in 10 \%, twelve months after in 25 \%  and twenty-four months after in 30 \%. For employment, uncertainty accounts for 10 \% twelve months after the original structural innovation and 20 \% two years later. For new orders, the uncertainty accounts for 15 \% of the variance six months on and then stabilize in 10 \%. For consumption, the uncertainty accounts for less that 5 \% in the first twelve months but after for 15 \% of the variance. For the financial prices---stock market index---, the uncertainty accounts for the same amount as consumption, i.e., starts in 5 \% and then its stabilizes in 15 \%. Finally, the forecast error of federal funds rate is explained by uncertainty between the 5 \% and 10 \%. These results confirm the importance of uncertainty as a driver of the economy's dynamics.
+The Figure \@ref(fig:fevd-plot) shows the forecast error variance decomposition (FEVD) which allows to analyze the contribution of each variable to the $h$-step forecast error variance of all other variables. Accordingly, the forecast error of the production series is explained by uncertainty six months after the innovation in 10 \%, twelve months after in 25 \%  and twenty-four months after in 30 \%. For employment, uncertainty accounts for 10 \% twelve months after the original structural innovation and 20 \% two years later. For new orders, the uncertainty accounts for 15 \% of the variance six months on and then stabilize in 10 \%. For consumption, the uncertainty accounts for less that 5 \% in the first twelve months but after for 15 \% of the variance. For the financial prices (stock market index), the uncertainty accounts for the same amount as consumption, i.e., starts in 5 \% and then its stabilizes in 15 \%. Finally, the forecast error of federal funds rate is explained by uncertainty between the 5 \% and 10 \%. These results confirm the importance of uncertainty as a driver of the economy's dynamics.
 
 One important question to resolver is if monetary policy interventions have effect on uncertainty. The Figure \@ref(fig:fevd-plot) shows the reaction of uncertainty to an unexpected loosening of monetary policy; it can be see that there not a significant effect. That is to say, an expansionary monetary policy does not have sizable impact on uncertainty. In the same way, the forecast error of the uncertainty series is minimally explained by an uncertainty shock (see Figure \@ref(fig:R-fevd-plot)). These findings are contrary to the documented in @bekaetal:2013 and @chuletal:2017, which reports significant effects, and add to the research field by exploring the relationship between policy intervention and uncertainty.
 
@@ -751,7 +751,7 @@ kable(
 
 ## Robustness {#robustness}
 
-I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty index. I estimate the uncertainty index using PCA [@stocwats:2002] and PCA estimates runs through Kalman ﬁlter---two-step [@dozetal:2011]---instead of quasi-maximum likelihood [@dozetal:2012]. The results are summarized in Figure \@ref(fig:robustness-methods). In general, the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
+I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty index. I estimate the uncertainty index using PCA [@stocwats:2002] and PCA estimates runs through Kalman ﬁlter---called two-step [@dozetal:2011]---instead of quasi-maximum likelihood [@dozetal:2012]. The results are summarized in Figure \@ref(fig:robustness-methods). In general, the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
 
 In the same way, I employ different variable sets and orderings in the VAR estimated in [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks]. First, I change the sector of the variables to the manufacturing sector with eight variables following @bloom:2009. The variables in the estimation order are production in manufacturing, employment in manufacturing, labor in manufacturing, inflation (based on all urban consumers), wages in manufacturing, federal funds rate, stock-market index and non-asset-market uncertainty^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. The ordering is based on the assumptions that shocks instantaneously influence the stock market, then prices (wages, inflation, and interest rates), and finally quantities (labor, employment, and output). All variables are Hamilton detrended with a look-ahead period of two years ($h = 24$), as explained in [Detrend].
 
