--- a/index/01-Literature.Rmd
+++ b/index/01-Literature.Rmd
@@ -1,6 +1,6 @@
 # Literature {#literature}
 
-In this chapter I first review the concepts of risk and uncertainty and them differences in the section [Risk and Uncertainty]. Then, I documented the history of index construction in macroeconomics in [History of Indices Construction]. Finally, I show the main uncertainty indices in the field---which use some of the methodologies exposed in the previous subsection---in [Empirical Measures of Uncertainty].
+In this chapter I first review the concepts of risk and uncertainty and them differences in the section [Risk and Uncertainty]. Then, I documented the history of index construction in macroeconomics in [History of Indices Construction]. Finally, I show the main uncertainty indices in the field---which use some of the methodologies exposed in the previous subsection---in [Empirical Measurements of Uncertainty].
 
 ## Risk and Uncertainty {#risk-and-uncertainty}
 
@@ -14,11 +14,11 @@ The Dynamic Factor Model (DFM) allows to solve a classic problem in empirical ma
 
 The first application of DFMs for monitoring the economy was the @stocwats:1991 experimental coincident index (XCI), which was in operation between May 1989 to December 2003. This index was the result from the Kalman filter estimate of one single factor among four monthly coincident indices: total non-farm employment, the index of industrial production, real manufacturing and trade sales, and real personal income less transfers. @stocwats:1993 showed that in retrospective analysis, the XCI was successful in contemporaneous monitoring and in real-time detection of the recession of 1990 although it was only good detecting up to six months in the future.
 
-After the use of DFMs for index construction, economists started estimated subsequent indices through state-space models. First, monthly real activity indices for US states [@cronclay:2005]---that are active since 2005. Second, the inclusion of mixed-frequency series to the XCI in @marimura:2003. Third, @aruoetal:2009 developed a mixed-frequency index for economic conditions so-called ADS. In contrast, recent studies focused in large dimensional systems. @stocwats:1999 constructed the base for the Chicago Fed National Activity Index (CFNAI), that is the principal components estimate of the common factor in 85 real activity variables. Finally, an European Union real economy activity index---named EuroCOIN---based on 145 Euro-area real activity variables was developed by @altietal:2010.
+After the use of DFMs for index construction, economists started estimated subsequent indices through state-space models. First, monthly real activity indices for US states [@cronclay:2005]---that are active since 2005. Second, the inclusion of mixed-frequency series to the XCI in @marimura:2003. Third, @aruoetal:2009 developed a mixed-frequency index for economic conditions so-called ADS. In contrast, recent studies have focused in large dimensional systems. @stocwats:1999 constructed the base for the Chicago Fed National Activity Index (CFNAI), that is the principal components estimate of the common factor in 85 real activity variables. Finally, an European Union real economy activity index---named EuroCOIN---based on 145 Euro-area real activity variables was developed by @altietal:2010.
 
-## Empirical Measures of Uncertainty {#empirical-measures-of-uncertainty}
+## Empirical Measurements of Uncertainty {#empirical-measurements-of-uncertainty}
 
-Different measures of uncertainty and proxies of this have been proposed in the literature. Nevertheless, the classification used to describe these indices in this document will be the underlying outcome, i.e., asset price or macroeconomic variable. Hence, the allegedly uncertainty measures are divided as non-asset-market and asset-market. In this document are considered the non-asset-market measures because these are the base for the index proposed^[This decision left out studies based on microeconomic information such as the cross-sectional dispersion of ﬁrms’ proﬁts [@bloom:2009] and estimated time-varying productivity [@blooetal:2018.]].
+Different measures of uncertainty and proxies of this have been proposed in the literature. Nevertheless, the classification used to describe these indices in this document will be the underlying outcome, i.e., asset price or macroeconomic variable. Hence, the allegedly uncertainty measures are divided as non-asset-market and asset-market. In this document are considered the non-asset-market measures because these are the base for the proposed index^[This decision left out studies based on microeconomic information such as the cross-sectional dispersion of ﬁrms’ proﬁts [@bloom:2009] and estimated time-varying productivity [@blooetal:2018.]].
 
 The first indicator in this category is the economic policy uncertainty index developed by @bakeetal:2016 which is based on three underlying components: news-coverage about policy-related economic uncertainty, tax expiration code data and economic forecaster disagreement. The first component is an index of search results from 10 major U.S. newspapers for articles that contain terms related to economic and policy uncertainty. The second component gauges uncertainty regarding the federal tax code---through reports from the Congressional Budget Office (CBO)---by counting the number of federal tax code provisions set to expire in future years. The third component relies on disagreement between professional forecasters---through the Federal Reserve Bank of Philadelphia's Survey of Professional Forecasters---as an indicator of uncertainty. Moreover, the authors have developed a new economic policy uncertainty index based on newspaper archives from Access World New's NewsBank service which contains the archives of thousands of newspapers across the globe. Finally, the authors also have a subindice for monetary policy---for each source, that is, one index draw from a balanced panel of 10 major national and regional U.S. newspapers and the other one from hundreds of U.S. newspapers covered by Access World News---that contains additional terms relevant to monetary policy.
 
