--- a/index/04-Results.Rmd
+++ b/index/04-Results.Rmd
@@ -1,6 +1,6 @@
 # Results {#results}
 
-In this chapter I present the uncertainty index that I proposed in [Non-Asset-Market Uncertainty Index]. Then, I compare it with the uncertainty indices from which it comes in [Correlation with Other Uncertainty indices]. After that, I evaluate the relationship between the new index and some real and financial variables in [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks]. In the next stage, I shows how me proposal forecast better that alternative indices in [Forecasting]. Finally, I perform several robustness exercises in [Robustness].
+In this chapter I present the uncertainty index that I proposed in [Non-Asset-Market Uncertainty Index]. Then, I compare it with the uncertainty indices from which it comes in [Correlation with Other Uncertainty indices]. After that, I evaluate the relationship between the new index and some real and financial variables in [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks]. In the next stage, I show how my proposal forecast is better than alternative indices in [Forecasting]. Finally, I perform several robustness exercises in [Robustness].
 
 ## Non-Asset-Market Uncertainty Index {#non-asset-market-uncertainty-index}
 
@@ -95,7 +95,7 @@ write_csv(
 
 I estimate the non-asset-market uncertainty index following the quasi-maximum likelihood estimator of @dozetal:2012 as described in [Dynamic factor model], although alternative estimators are tested in [Robustness]. Moreover, I use one dynamic factor, one static factor and one lag in the specification of the model because I am looking for one single summary index that captures the common comovements of uncertainty, hence, one dynamic and static factor seems appropriate. This binds the lag order to one as the lag order can not be greater that the ratio between the number of static factors and the number of dynamic factors [@kililutk:2017].
 
-Although the goal is construct one economic index from the underlying series, it is worthy show all factors and its behavior. Each factor is associated with an eigenvalue of the correlation matrix of the the raw data. The first factor is associated with the largest eigenvalue, the second factor with the second-largest eigenvalue, and so on. A *scree plot* displays the marginal contribution---the average additional explanatory value of the $k$th factor---of the $k$th principal component to the average $R^{2}$ of the $n$ regressions of $\mX$ against the first $k$ principal components. Essentially, the scree plot shows the ordered eigenvalues of $\hat{\sum}_{\mX}$ normalized by the sum of eigenvalues. The Figure`~`{=latex}\@ref(fig:scree-plot) displays the scree plot where only the first factor is significant. Likewise, the plot shows a bend and only the first factor is above this sharp break---which suggest one factor following the scree test of @cattel:1966. In summary, a single component is appropriate for summarizing this dataset.
+Although the goal to construct one economic index from the underlying series, it is worthy to show all factors and its behavior. Each factor is associated with an eigenvalue of the correlation matrix of the the raw data. The first factor is associated with the largest eigenvalue, the second factor with the second-largest eigenvalue, and so on. A *scree plot* displays the marginal contribution---the average additional explanatory value of the $k$th factor---of the $k$th principal component to the average $R^{2}$ of the $n$ regressions of $\mX$ against the first $k$ principal components. Essentially, the scree plot shows the ordered eigenvalues of $\hat{\sum}_{\mX}$ normalized by the sum of eigenvalues. The Figure`~`{=latex}\@ref(fig:scree-plot) displays the scree plot where only the first factor is significant. Likewise, the plot shows a bend and only the first factor is above this sharp break---which suggest one factor following the scree test of @cattel:1966. In summary, a single component is appropriate for summarizing this dataset.
 
 ```{r scree_plot_values, include = FALSE}
 scree_plot <- fa.parallel(
@@ -163,15 +163,15 @@ IP <- tq_get("INDPRO", get = "economic.data", from = "1972-01-01") %>%
 VAR_data %<>% inner_join(IP)
 ```
 
-In the Figure`~`{=latex}\@ref(fig:non-asset-market-uncertainty-index) is presented the non-asset-market index together with the recession dates in the United States as indicated by the National Bureau of Economic Research (NBER) on its website <https://www.nber.org/cycles.html>. Also, the 95th percentile of the series is presented as solid horizontal bar. The index peaks coincide with well known episodes of uncertainty in the economy as the Black Monday in October 1987, the bursting of the dot-com bubble and the Great Recession 2007--2009, although only the last has considerable impact.
+In the Figure`~`{=latex}\@ref(fig:non-asset-market-uncertainty-index) is presented the non-asset-market index together with the recession dates in the United States as indicated by the National Bureau of Economic Research (NBER). Also, the 95th percentile of the series is presented a solid horizontal bar. The index peaks coincide with well known episodes of uncertainty in the economy as the Black Monday in October 1987, the bursting of the dot-com bubble and the Great Recession 2007--2009, although only the last has a considerable impact.
 
 The index is clearly countercyclical, the cross-correlation with industrial production growth^[The industrial production growth is calculated as the 12-month moving average of monthly growth rates (in annualized percentage).] is `r comma(-0.69)`. In the same period, the cross-correlation for the macroeconomic uncertainty index from @juraetal:2015 is `r comma(cor(VAR_data[["moving_growth_production_all"]], VAR_data[["MU_JLN_h1"]]))`. The latter shows that the new index has less pronounced peaks around the recession dates of the economy, which is more appealing to a continually level of uncertainty in the economy.
 
-I report in Table`~`{=latex}\@ref(tab:summary-table) descriptive statistics for the non-asset-market uncertainty index. The skewness, kurtosis, persistence and half-life for the full sample and for two sub-samples are presented (January 1985 to July 2007 and August 2007 to August 2017). This break date was chosen after testing for a break at an unknown date in the autoregressive model of the shocks persistence: AR($1$) with drift. The basic idea is to calculate an $\rF$ statistic---often called Chow statistic, named for its inventor, Gregory Chow [-@chow:1960]---for each conceivable breakpoint in the interval $\tau_{0} = 0.15T$ and $\tau_{1} = 0.85T$, where $T$ is the total number of observations, and reject the null hypothesis of structural stability if the largest of the resulting $\rF$ statistics exceeds a certain critical value^[That is to say, an $\rF$ statistic is computed for each potential breakpoint between 1989:M11 and 2012:M9 testing the hypothesis that the coefficients are constant against the alternative that they have different values before and after the breakpoint, omitting the leading and trailing 15`~`{=latex}\% of observations.] [@andrews:2003]. This modified Chow test is variously called the Quand Likelihood Ratio ($\rQLR$) statistic [@quandt:1960]^[See @hansen:2001 for additional discussion of estimation and testing in the presence of discrete breaks. Also, see @perron:2006 for a general survey.]. Given that there is evidence of one structural change in the model is necessary dating that structural change. Bai and Perron [-@baiperr:1998;-@baiperr:2003]  established a general methodology for estimating breakpoints and their associated confidence intervals in OLS regression. Henceforth, the two periods are choose following this methodology.
+I report in Table`~`{=latex}\@ref(tab:summary-table) descriptive statistics for the non-asset-market uncertainty index. The skewness, kurtosis, persistence and half-life for the full sample and for two sub-samples are presented (January 1985 to July 2007 and August 2007 to August 2017). This break date was chosen after testing for a break at an unknown date in the autoregressive model of the shocks persistence: AR($1$) with drift. The basic idea is to calculate an $\rF$ statistic---often called Chow statistic, named for its inventor, Gregory Chow [-@chow:1960]---for each conceivable breakpoint in the interval $\tau_{0} = 0.15T$ and $\tau_{1} = 0.85T$, where $T$ is the total number of observations, and reject the null hypothesis of structural stability if the largest of the resulting $\rF$ statistics exceeds a certain critical value^[That is to say, an $\rF$ statistic is computed for each potential breakpoint between 1989:M11 and 2012:M9 testing the hypothesis that the coefficients are constant against the alternative that they have different values before and after the breakpoint, omitting the leading and trailing 15`~`{=latex}\% of observations.] [@andrews:2003]. This modified Chow test is variously called the Quand Likelihood Ratio ($\rQLR$) statistic [@quandt:1960]^[See @hansen:2001 for additional discussion of estimation and testing in the presence of discrete breaks. Also, see @perron:2006 for a general survey.]. Given that there is evidence of one structural change in the model, it is necessary dating that structural change. Bai and Perron [-@baiperr:1998;-@baiperr:2003]  established a general methodology for estimating breakpoints and their associated confidence intervals in OLS regression. Henceforth, the two periods are choose following this methodology.
 
 The summary statistics in Table`~`{=latex}\@ref(tab:summary-table) for the full period are misleading. For the first period of the sample the persistence is less that for the second period, so the time before a shock halve the distance to the stationary mean is smaller. Moreover, the distribution of the uncertainty index is different in location and shape for each period: the first part is slightly asymmetric and it has fewer outliers while the second part has more values above that below the mean and it has several values far from the mean. Nevertheless, the similarity between both periods is substantial but the shock for the Great Recession in 2007--2009. The last result can be though as evidence in line with a level of uncertainty less volatile and extreme across the economy, which is in concordance with the lower correlation founded in the last paragraph with a proxy for business cycle: industrial production.
 
-The persistence of the non-asset-market uncertainty index in the second sample is greater, for example, than that of the macroeconomic uncertainty from @juraetal:2015: `r comma(DescribeIndex(DFM_base[DFM_base[["Date"]] >= "2007-08-31", ][["NAM"]])[4])` months versus `r comma(DescribeIndex(uncertainty_indices[["MU_JLN_h1"]])[4])` months. This shows that the level of uncertainty is continual in the sample.
+The persistence of the non-asset-market uncertainty index in the second sample is greater, for example, than of the macroeconomic uncertainty from @juraetal:2015: `r comma(DescribeIndex(DFM_base[DFM_base[["Date"]] >= "2007-08-31", ][["NAM"]])[4])` months versus `r comma(DescribeIndex(uncertainty_indices[["MU_JLN_h1"]])[4])` months. This shows that the level of uncertainty is continual in the sample.
 
 ```{r summary-table-raw}
 summary_table_raw <- tibble(
@@ -190,7 +190,7 @@ summary_table_raw <- tibble(
 )
 ```
 
-(ref:summary-table) **Summary Statistics of Non-Asset-Market Uncertainty Index in Two Sub-Samples**: The table reports estimates of skewness, kurtosis, first-order autocorrelation coefficient and half-life of an aggregate uncertainty innovation.
+(ref:summary-table) **Summary Statistics of Non-Asset-Market Uncertainty Index in Two Sub-Samples**: The table reports estimations of skewness, kurtosis, first-order autocorrelation coefficient and half-life of an aggregate uncertainty innovation.
 
 ```{r summary-table, results = "asis"}
 kable(
@@ -235,7 +235,7 @@ corr_indices <- cor(
 )
 ```
 
-(ref:corr-plot) **Correlogram Between the Non-Asset-Market Uncertainty Index and Other Uncertainty Indices**: The figure shows the correlation matrix between the the non-asset-market uncertainty index and other indices. The variables are defined as: EPU (3C): economic policy uncertainty index from three underlying components, EPU (News): economic policy uncertainty index based on newspaper archives from Access World New's NewsBank service, MPU (AWN): monetary policy uncertainty from draws on hundreds of U.S. newspapers covered by Access World News, MPU (10): monetary policy uncertainty from draws on a balanced panel of 10 major national and regional U.S. newspapers, MPU: monetary policy uncertainty from draws on the Wall Street Journal, New York Times and Washington Post, MU ($h$): macroeconomic uncertainty at $h$ horizon, RU ($h$): real uncertainty at $h$ horizon, FU ($h$): financial uncertainty at $h$ horizon and Non-Asset-Market: the uncertainty index propose in this document.
+(ref:corr-plot) **Correlogram Between the Non-Asset-Market Uncertainty Index and Other Uncertainty Indices**: The figure shows the correlation matrix between the non-asset-market uncertainty index and other indices. The variables are defined as: EPU (3C): economic policy uncertainty index from three underlying components, EPU (News): economic policy uncertainty index based on newspaper archives from Access World New's NewsBank service, MPU (AWN): monetary policy uncertainty from draws on hundreds of U.S. newspapers covered by Access World News, MPU (10): monetary policy uncertainty from draws on a balanced panel of 10 major national and regional U.S. newspapers, MPU: monetary policy uncertainty from draws on the Wall Street Journal, New York Times and Washington Post, MU ($h$): macroeconomic uncertainty at $h$ horizon, RU ($h$): real uncertainty at $h$ horizon, FU ($h$): financial uncertainty at $h$ horizon and Non-Asset-Market: the uncertainty index propose in this document.
 
 ```{r corr-plot, fig.asp = 0.85, fig.cap = "(ref:corr-plot)", fig.scap = "Correlogram Between the Non-Asset-Market Uncertainty Index and Other Uncertainty Indices"}
 corrplot(
@@ -256,7 +256,7 @@ corrplot(
 )
 ```
 
-To interpret the Figure`~`{=latex}\@ref(fig:corr-plot), the color in each cell represents a correlation between the two variables that meet at each cell. The magnitude and direction of the correlation is defined by the color spectrum in the legend of the plot. In general, the light color represents a positive correlation and the dark color represents a low or even negative correlation. Also, the rows and columns have been reordered---using principal components analysis, as explained in @friendly:2002 for correlograms---to cluster variables together that have similar correlation patterns. It is shown from the shaded cells that the non-asset-market uncertainty index is much more correlated with the econometrics measures of uncertainty and less with the newspaper-based measures of uncertainty.
+To understand the Figure`~`{=latex}\@ref(fig:corr-plot), the color in each cell represents a correlation between the two variables that meet at each cell. The magnitude and direction of the correlation is defined by the color spectrum in the legend of the plot. In general, the light color represents a positive correlation and the dark color represents a low or even negative correlation. Also, the rows and columns have been reordered---using principal components analysis, as explained in @friendly:2002 for correlograms---to cluster variables together that have similar correlation patterns. It is shown from the shaded cells that the non-asset-market uncertainty index is much more correlated with the econometrics measures of uncertainty and less with the newspaper-based measures of uncertainty.
 
 ## Estimates on the Impact of Non-Asset-Market Uncertainty Shocks {#estimates-on-the-impact-of-non-asset-market-uncertainty-shocks}
 
@@ -285,7 +285,7 @@ The VAR model with constant term ignored can be written as follows:
   \vy_{t} = \mA_{1} \vy_{t - 1} + \cdots + \mA_{12} \vy_{t - 12} + \mC \veta_{t}
 \end{equation}
 
-where $\mC$ is a $11 \times 11$ lower triangular matrix with diagonal terms equal to unity, and $\veta_{t}$ is a 11-dimensional vector of zero-mean, serially uncorrelated shocks with a diagonal variance-covariance matrix. I estimate the parameters $\mA_{i} ~ \text{with} ~ i=1, \ldots, ~ 12$, $\mC$, and the variances of the elements of $\veta_{t}$ using standard least-squares methods. Using these estimates, I compute the dynamic path of the variables following a one shock in $\upsilon_{t}$ with initial conditions set to zero. This paths corresponds to the coefficients in the impulse response functions, which are displayed in Figure`~`{=latex}\@ref(fig:irf-baseline-plot).
+where $\mC$ is a $11 \times 11$ lower triangular matrix with diagonal terms equal to unity, and $\veta_{t}$ is a 11-dimensional vector of zero-mean, serially uncorrelated shocks with a diagonal variance-covariance matrix. I estimate the parameters $\mA_{i} ~ \text{with} ~ i=1, \ldots, ~ 12$, $\mC$, and the variances of the elements of $\veta_{t}$ using standard least-squares methods. Using these estimations, I compute the dynamic path of the variables following a one shock in $\upsilon_{t}$ with initial conditions set to zero. This paths corresponds to the coefficients in the impulse response functions, which are displayed in Figure`~`{=latex}\@ref(fig:irf-baseline-plot).
 
 ```{r chosen_variables}
 chosen_variables <- c(
@@ -392,11 +392,11 @@ matrix_irf %>%
     theme(strip.text = element_text(size = rel(1.25)))
 ```
 
-Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series does not stabilize at a lower level as reported in @chuletal:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal Reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect evidenced in @chuletal:2017 for New Orders.
+Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series do not stabilize at a lower level as reported in @chuletal:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal Reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect evidenced in @chuletal:2017 for New Orders.
 
 The Figure`~`{=latex}\@ref(fig:fevd-plot) shows the forecast error variance decomposition (FEVD) which allows to analyze the contribution of each variable to the $h$-step forecast error variance of all other variables. Accordingly, the forecast error of the production series is explained by uncertainty six months after the innovation in 10`~`{=latex}\%, twelve months after in 25`~`{=latex}\%  and twenty-four months after in 30`~`{=latex}\%. For employment, uncertainty accounts for 10`~`{=latex}\% twelve months after the original structural innovation and 20`~`{=latex}\% two years later. For new orders, the uncertainty accounts for 15`~`{=latex}\% of the variance six months on and then stabilize in 10`~`{=latex}\%. For consumption, the uncertainty accounts for less that 5`~`{=latex}\% in the first twelve months but after for 15`~`{=latex}\% of the variance. For the financial prices---stock market index---the uncertainty accounts for the same amount as consumption, i.e., starts in 5`~`{=latex}\% and then its stabilizes in 15`~`{=latex}\%. Finally, the forecast error of federal funds rate is explained by uncertainty between the 5`~`{=latex}\% and 10`~`{=latex}\%. These results confirm the importance of uncertainty as a driver of the economy's dynamics.
 
-One important question to resolver is if monetary policy interventions have effect on uncertainty. The Figure`~`{=latex}\@ref(fig:fevd-plot) shows the reaction of uncertainty to an unexpected loosening of monetary policy; it can be see that there not a significant effect. That is to say, an expansionary monetary policy does not have sizable impact on uncertainty. In the same way, the forecast error of the uncertainty series is minimally explained by an uncertainty shock---see Figure`~`{=latex}\@ref(fig:R-fevd-plot). These findings are contrary to the documented in @bekaetal:2013 and @chuletal:2017 which reports significant effects, and add to the research field by exploring the relationship between policy intervention and uncertainty.
+One important question to resolve is if monetary policy interventions have effect on uncertainty. The Figure`~`{=latex}\@ref(fig:fevd-plot) shows the reaction of uncertainty to an unexpected loosening of monetary policy; it can be see that there not a significant effect. That is to say, an expansionary monetary policy does not have sizable impact on uncertainty. In the same way, the forecast error of the uncertainty series is minimally explained by an uncertainty shock---see Figure`~`{=latex}\@ref(fig:R-fevd-plot). These findings are contrary to the documented in @bekaetal:2013 and @chuletal:2017 which reports significant effects, and add to the research field by exploring the relationship between policy intervention and uncertainty.
 
 ```{r fevd, warning = FALSE, message = FALSE}
 fevd_baseline <- fevd(VAR_baseline, 60)
