--- a/index/05-Conclusion.Rmd
+++ b/index/05-Conclusion.Rmd
@@ -4,7 +4,7 @@ I propose an index of non-asset-market uncertainty on a monthly basis for the Un
 
 On the other hand, I identify a relation between the uncertainty index and established periods of economic stress such as bubble regimes in the stock market. In addition, I document a break in the persistence of the series before and after the Great Recession 2007-2009. The series becomes more persistence and with shocks of greater duration after this date.
 
-Furthermore, I discussed why my uncertainty index has appealing characteristics that made him more suitable for prediction and balances the extreme movements---high volatility and extreme correlation with recession dates---from the traditional uncertainty measures.
+Furthermore, I discussed why my uncertainty index has appealing characteristics that made it more suitable for prediction and balances the extreme movements---high volatility and extreme correlation with recession dates---from the traditional uncertainty measures.
 
 The dynamics observed within the VAR model are compatible with previous findings. That is, a negative relation between the real variables such as production, employment, new orders and consumption. In the same way, its evidenced a negative relation with financial prices such as the stock market index. 
 
