--- a/index/01-Literature.Rmd
+++ b/index/01-Literature.Rmd
@@ -18,7 +18,7 @@ After the use of DFMs for index construction, economists started estimated subse
 
 ## Empirical Measurements of Uncertainty {#empirical-measurements-of-uncertainty}
 
-Different measures of uncertainty and proxies of this have been proposed in the literature. Nevertheless, the classification used to describe these indices in this document will be the underlying outcome, i.e., asset price or macroeconomic variable. Hence, the allegedly uncertainty measures are divided as non-asset-market and asset-market. In this document are considered the non-asset-market measures because these are the base for the proposed index^[This decision left out studies based on microeconomic information such as the cross-sectional dispersion of ﬁrms’ proﬁts [@bloom:2009] and estimated time-varying productivity [@blooetal:2018.]].
+Different measures of uncertainty and proxies of this have been proposed in the literature. Nevertheless, the classification used to describe these indices in this document will be the underlying outcome, i.e., asset price or macroeconomic variable. Hence, the allegedly uncertainty measures are divided as non-asset-market and asset-market. In this document are considered the non-asset-market measures because these are the base for the proposed index^[This decision left out studies based on microeconomic information such as the cross-sectional dispersion of ﬁrms’ proﬁts [@bloom:2009] and estimated time-varying productivity [@blooetal:2018].]
 
 The first indicator in this category is the economic policy uncertainty index developed by @bakeetal:2016 which is based on three underlying components: news-coverage about policy-related economic uncertainty, tax expiration code data and economic forecaster disagreement. The first component is an index of search results from 10 major U.S. newspapers for articles that contain terms related to economic and policy uncertainty. The second component gauges uncertainty regarding the federal tax code---through reports from the Congressional Budget Office (CBO)---by counting the number of federal tax code provisions set to expire in future years. The third component relies on disagreement between professional forecasters---through the Federal Reserve Bank of Philadelphia's Survey of Professional Forecasters---as an indicator of uncertainty. Moreover, the authors have developed a new economic policy uncertainty index based on newspaper archives from Access World New's NewsBank service which contains the archives of thousands of newspapers across the globe. Finally, the authors also have a subindice for monetary policy---for each source, that is, one index draw from a balanced panel of 10 major national and regional U.S. newspapers and the other one from hundreds of U.S. newspapers covered by Access World News---that contains additional terms relevant to monetary policy.
 
